--- a/samples/es5-bundle/index.html
+++ b/samples/es5-bundle/index.html
@@ -2,7 +2,12 @@
 <html lang="en-US">
   <head>
     <title>Web Chat: Full-featured bundle with ES5 polyfills</title>
-    <script src="https://cdn.botframework.com/botframework-webchat/master/botchat-es5.js"></script>
+    <!--
+      For demonstration purpose, we are using development branch of Web Chat at "/master/webchat-es5.js".
+      When you are using Web Chat for production, you should use the latest stable at "/latest/webchat-es5.js".
+      Or locked down on a specific version "/4.1.0/webchat-es5.js".
+    -->
+    <script src="https://cdn.botframework.com/botframework-webchat/master/webchat-es5.js"></script>
     <style>
       html, body { height: 100% }
       body { margin: 0 }
