--- a/samples/full-bundle/index.html
+++ b/samples/full-bundle/index.html
@@ -2,7 +2,12 @@
 <html lang="en-US">
   <head>
     <title>Web Chat: Full-featured bundle</title>
-    <script src="https://cdn.botframework.com/botframework-webchat/master/botchat.js"></script>
+    <!--
+      For demonstration purpose, we are using development branch of Web Chat at "/master/webchat.js".
+      When you are using Web Chat for production, you should use the latest stable at "/latest/webchat.js".
+      Or locked down on a specific version "/4.1.0/webchat.js".
+    -->
+    <script src="https://cdn.botframework.com/botframework-webchat/master/webchat.js"></script>
     <style>
       html, body { height: 100% }
       body { margin: 0 }
