--- a/samples/minimal-bundle/index.html
+++ b/samples/minimal-bundle/index.html
@@ -3,15 +3,21 @@
   <head>
     <title>Web Chat: Minimal bundle</title>
     <!--
-      We are using a "core" build, which does not contain:
+      We are using a "minimal" build, which does not contain:
       - Adaptive Cards
       - Cognitive Services Bing Speech
       - Markdown-It
+      - sanitize-html
 
       However, it contains:
       - Direct Line JS
     -->
-    <script src="https://cdn.botframework.com/botframework-webchat/master/botchat-minimal.js"></script>
+    <!--
+      For demonstration purpose, we are using development branch of Web Chat at "/master/webchat-minimal.js".
+      When you are using Web Chat for production, you should use the latest stable at "/latest/webchat-minimal.js".
+      Or locked down on a specific version "/4.1.0/webchat-minimal.js".
+    -->
+    <script src="https://cdn.botframework.com/botframework-webchat/master/webchat-minimal.js"></script>
     <style>
       html, body { height: 100% }
       body { margin: 0 }
