--- a/samples/speech-browser/index.html
+++ b/samples/speech-browser/index.html
@@ -6,7 +6,12 @@
        Speech functionality is a core feature in Web Chat and does not require the full bundle.
        You can use either the core bundle or full bundle, depending on your other bot specifications.
     -->
-    <script src="https://cdn.botframework.com/botframework-webchat/master/botchat.js"></script>
+    <!--
+      For demonstration purpose, we are using development branch of Web Chat at "/master/webchat.js".
+      When you are using Web Chat for production, you should use the latest stable at "/latest/webchat.js".
+      Or locked down on a specific version "/4.1.0/webchat.js".
+    -->
+    <script src="https://cdn.botframework.com/botframework-webchat/master/webchat.js"></script>
     <style>
       html, body { height: 100% }
       body { margin: 0 }
