--- a/samples/speech-cognitive-services-bing-speech/index.html
+++ b/samples/speech-cognitive-services-bing-speech/index.html
@@ -3,7 +3,12 @@
   <head>
     <title>Web Chat: Cognitive Services Bing Speech using JavaScript</title>
     <!-- Cognitive Services Bing Speech adapter is only available in full bundle -->
-    <script src="https://cdn.botframework.com/botframework-webchat/master/botchat.js"></script>
+    <!--
+      For demonstration purpose, we are using development branch of Web Chat at "/master/webchat.js".
+      When you are using Web Chat for production, you should use the latest stable at "/latest/webchat.js".
+      Or locked down on a specific version "/4.1.0/webchat.js".
+    -->
+    <script src="https://cdn.botframework.com/botframework-webchat/master/webchat.js"></script>
     <style>
       html, body { height: 100% }
       body { margin: 0 }
